--- a/roadmap/implementers-guide/book.toml
+++ b/roadmap/implementers-guide/book.toml
@@ -8,5 +8,11 @@ title = "The Polkadot Parachain Host Implementers' Guide"
 [preprocessor.graphviz]
 command = "mdbook-graphviz"
 
+[preprocessor.mermaid]
+command = "mdbook-mermaid"
+
 [output.html]
+additional-css = ["mermaid.css"]
+additional-js = ["mermaid.min.js", "mermaid-init.js"]
+
 [output.linkcheck]
